@@ -311,11 +311,14 @@
       </analyzer>
   </fieldtype>
 
+  <fieldType name="uuid" class="solr.UUIDField" />
+
  </types>
 
 
  <fields>
    <field name="id" type="integer" indexed="true" stored="true" multiValued="false" required="false"/>
+   <field name="uuid" type="uuid" stored="true" />
    <field name="name" type="nametext" indexed="true" stored="true"/>
    <field name="text" type="text" indexed="true" stored="false"/>
    <field name="subject" type="text" indexed="true" stored="true"/>
